# axum-tera-i18n

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/locales/es/: main.ftl
src/pages/: auth.rs  home.rs  mod.rs
src/templates/: base.html
src/templates/home/: index.html
